terraform-provision-gke-cluster/assets/ingress-grafana.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: ingress-grafana
  namespace: monitoring
spec:
  ingressClassName: nginx
  rules:
  - host: grafana.robertoasir.com
    http:
      paths:
      - backend:
          service:
            name: prometheus-grafana-lb
            port:
              number: 3000
        path: '/'
        pathType: Prefix
status:
  loadBalancer: {}
